Improve nutrition search with prefix, word and USDA fallback matching